# far2l

./: .cirrus.yml  .clang-format  .clang-format.json  .coderabbit.yaml  .editorconfig  .gitignore  .golangci.yml  .sonarcloud.properties  .travis.yml  Brewfile  CMakeLists.txt  CODESTYLE.md  CODESTYLE.txt  CodeLite.workspace  DUMPER.md  Dockerfile  FAR.workspace  HACKING.md  LICENSE.Far2.txt  LICENSE.txt  Makefile  README.md  VTExt.md  VTExts.md  _All.project  changelog.md  codelite_makefix.sh  dependencies-minimal.txt  dependencies.txt  far2lOverlays.nix  macify_projects.sh  sonar-project.properties  update_build.sh
FARStdlib/: CMakeLists.txt
FARStdlib/include/: all_far.h  fstd_String.h  fstdlib.h  funi.h
FARStdlib/src/: fstd_Arg.cpp  fstd_ClpS.cpp  fstd_Con.cpp  fstd_Dialog.cpp  fstd_FMsg.cpp  fstd_FUtils.cpp  fstd_INProc.cpp  fstd_Msg.cpp  fstd_Patt.cpp  fstd_Reg.cpp  fstd_SCol.cpp  fstd_SText.cpp  fstd_String.cpp  fstd_Utils.cpp  fstd_asrt.cpp  fstd_crc32.cpp  fstd_err.cpp  fstd_exSCAT.cpp  fstd_exSCHC.cpp  fstd_exSCMP.cpp  fstd_exSCPY.cpp  fstd_exSNCH.cpp  fstd_exSPCH.cpp  fstd_exSPS.cpp  fstd_exit.cpp  fstd_ilist.cpp  fstd_log.cpp  fstd_menu.cpp  fstd_mesg.cpp  fstd_mklog.cpp  fstd_per.cpp  fstd_plg.cpp  fstd_scr.cpp  fstd_stdlibCS.cpp
ImageViewer/: CMakeLists.txt  Common.h  ImageAtFull.cpp  ImageAtQV.cpp  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  Plugin.cpp
ImageViewer/src/: Common.h  Image.cpp  Image.h  ImageAtFull.cpp  ImageAtQV.cpp  ImageView.cpp  ImageView.h  Plugin.cpp  Settings.cpp  Settings.h  ToolExec.cpp  ToolExec.h  lng.h
NetRocks/: .editorconfig  CMakeLists.txt  HACKING.txt
NetRocks/FISH/: append  chmod  get  ls  send  unlink
NetRocks/src/: BackgroundTasks.cpp  BackgroundTasks.h  ConnectionsPool.cpp  ConnectionsPool.h  Erroring.cpp  Erroring.h  FileInformation.h  GetItems.cpp  GetItems.h  GetSelectedItems.cpp  GetSelectedItems.h  Globals.cpp  Globals.h  HACKING.txt  IPC.cpp  IPC.h  ImportFarFtpSites.cpp  Location.cpp  Location.h  NetRocks.cpp  PluginImpl.cpp  PluginImpl.h  PluginImpl_Get.cpp  PluginPanelItems.cpp  PluginPanelItems.h  PooledStrings.cpp  PooledStrings.h  Protocol.h  ProtocolSFTP.cpp  ProtocolSFTP.h  SiteConnection.cpp  SiteConnection.h  SiteConnectionSlave.cpp  SitesConfig.cpp  SitesConfig.h  Utils.cpp  Utils.h  lng.h
NetRoks/: CMakeLists.txt
NetRoks/src/: Erroring.cpp  Erroring.h  Globals.cpp  Globals.h  IPC.cpp  NetRoks.cpp  PluginImpl.cpp  PluginImpl.h  PooledStrings.cpp  SiteConnection.cpp  SiteConnection.h  SiteConnectionSlave.cpp
OpenWith/: CMakeLists.txt
OpenWith/configs/: OpenWithEng.lng  OpenWithRus.lng  help_en.hlf  help_ru.hlf
OpenWith/src/: AppProvider.cpp  AppProvider.hpp  BSDAppProvider.cpp  BSDAppProvider.hpp  DummyAppProvider.cpp  DummyAppProvider.hpp  ExtensionMimeMap.cpp  LinuxAppProvider.cpp  LinuxAppProvider.hpp  MacOSAppProvider.hpp  MacOSAppProvider.mm  OpenWith.cpp  OpenWith.hpp  XDGBasedAppProvider.cpp  XDGBasedAppProvider.hpp  common.hpp  lng.hpp
SimpleIndent/: CMakeLists.txt
SimpleIndent/src/: SimpleIndent.cpp  plugin_123.hpp  version.hpp
WinPort/: .editorconfig  APIClipboard.cpp  APIConsole.cpp  APIFSNotify.cpp  APIFiles.cpp  APIKeyboard.cpp  APIMemory.cpp  APIOther.cpp  APIPrintFormat.cpp  APIRegistry.cpp  APIStringCodepages.cpp  APIStringMap.cpp  APITime.cpp  CMakeLists.txt  CallInMain.h  ConsoleBuffer.cpp  ConsoleBuffer.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  FarTTY.h  KeyFileHelper.cpp  KeyFileHelper.h  Main.cpp  PrintFormat.cpp  StrUtils.cpp  Utils.cpp  Utils.h  WinCompat.h  WinPort.h  WinPort.mk  WinPort.project  WinPort.txt  WinPort.vcxproj  WinPortDecl.h  WinPortHandle.cpp  WinPortHandle.h  WinPortSynch.cpp  WinPortSynch.h  (+6 more)
WinPort/src/: .editorconfig  APIBackendOptions.cpp  APIClipboard.cpp  APIConsole.cpp  (+40 more)
adb/: CMakeLists.txt  README.md
align/: CMakeLists.txt
arclite/: CMakeLists.txt  MyStringLite.h  Patch7zCP.cpp  archive.cpp  archive.hpp  arclite.xml  attr.cpp  common.cpp  common.hpp  comutils.hpp  delete.cpp  extract.cpp  farutils.cpp  farutils.hpp  headers.hpp  msearch.hpp  msg.hpp  open.cpp  options.cpp  options.hpp  plugin.cpp  rsrc.hpp  strutils.cpp  sysutils.cpp  sysutils.hpp  ui.cpp  ui.hpp  update.cpp  utils.hpp  version.hpp
autowrap/: CMakeLists.txt
calc/: .editorconfig  CMakeLists.txt  LICENSE  whatsnew_en.txt  whatsnew_ru.txt
colorer/: .clang-format  CMakeLists.txt  colorer.mk  colorer.project  colorer.txt
compare/: CMakeLists.txt
crest/: CMakeLists.txt  config.cpp  crest.c  crest.h  cresteng.hlf  cresteng.lng
drawline/: CMakeLists.txt
editcase/: CMakeLists.txt
editorcomp/: .editorconfig  CMakeLists.txt
edsort/: CMakeLists.txt  i18n2lng.py
far2l/: .editorconfig  .vtshell.cpp.swp  ANSICON_NOTICE.txt  AnsiEsc.cpp  AnsiEsc.hpp  BaseFileMask.hpp  Bookmarks.cpp  Bookmarks.hpp  BookmarksLegacy.cpp  BookmarksMenu.cpp  CFileMask.cpp  CFileMask.hpp  CMakeLists.txt  ConfigRW.cpp  ConfigRW.hpp  CriticalSections.hpp  DList.cpp  DList.hpp  DetectCodepage.cpp  DetectCodepage.h  DlgBuilder.cpp  DlgBuilder.hpp  DlgGuid.cpp  DlgGuid.hpp  FARString.cpp  FARString.hpp  FAR_NOTICE.tzt  Far.exe.manifest.m4  Far.icns  FarDlgBuilder.hpp  FarEng.hlf.m4  FarHun.hlf.m4  FileMasksProcessor.cpp  FileMasksProcessor.hpp  FileMasksWithExclude.cpp  FileMasksWithExclude.hpp  File_id.diz  FilesSuggestor.cpp  FilesSuggestor.hpp  HotkeyLetterDialog.cpp  (+297 more)
farftp/: .editorconfig  CMakeLists.txt  farftp.mk  farftp.project  farftp.txt
farlng/: .editorconfig  CMakeLists.txt  farlng.mk  farlng.project  farlng.txt
filecase/: .editorconfig  CMakeLists.txt
gitgutter/: CMakeLists.txt
gvfspanel/: CMakeLists.txt
hexitor/: CMakeLists.txt  ChangeLog  i18n2lng.py  lng2json.py  readme_en.txt  readme_pl.txt  readme_ru.txt
incsrch/: .editorconfig  CMakeLists.txt  ^#enter.reg  clip.c  config.cpp  control.c  file_id.diz  incsrch.c  incsrch.h  incsrch.lnk  incsrch.rc  key_macros.ini  loc.c  loc.h  locale.c  makefile  makefile.msc  minwin.h  misc.h  plugin.hpp  search.c  srchlng.h  util.c
inside/: CMakeLists.txt
mcvfs/: CMakeLists.txt
(+3401 files in other folders)
